@@ -1,3 +1,9 @@
+Thu Sep 18 04:50:38 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tests/DCPS/Ownership/DataReaderListener.cpp:
+
+          Fix fuzz.
+
 Wed Sep 17 21:44:28 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * dds/InfoRepo/DCPS_IR_Publication.cpp:
